fix scrollbar

--- a/djgentelella/static/gentelella/css/custom.css
+++ b/djgentelella/static/gentelella/css/custom.css
@@ -150,7 +150,7 @@ html , body{
 }
 .left_col {
     background: #2A3F54;
-    height: 1100px;
+    max-height: 1600px;
 }
 .select2-container {
     width: 100% !important;
@@ -931,7 +931,9 @@ a:focus {
     line-height: 30px
 }
 .main_menu_side {
-    padding: 0
+    padding: 0;
+    max-height: 100vh;
+    overflow-y: auto;
 }
 .bs-docs-sidebar .nav>li>a {
     display: block;
@@ -4680,4 +4682,19 @@ input-group > .custom-file {
     background-color: #fff; /* Color de fondo para el contenido */
     border: 1px solid #1ABB9C;; /* Bordes */
     border-radius: 5px; /* Esquinas redondeadas */
+}
+
+/* ── WebKit/Blink: Chrome, Edge, Brave, Safari, Firefox not need  */
+*::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+}
+
+*::-webkit-scrollbar-thumb {
+  background: #767684;
+  border-radius: 5px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
 }
